# Jack-Of-Blades

./: UI.run  UIDesigner.cpp  config.run  readme.md  settings.json  static.run
Jack of Blades (v2)/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  settings.json
Jack of Blades (v2)/data/animation/: default.json  example.json  player_fall.json  player_front_idle.json  player_front_walking.json  stone_brick_wall_top.json
Jack of Blades (v2)/data/level/: example.json
Jack of Blades (v2)/game/: settings.hpp
Jack of Blades (v2)/game/lib/: JOB.hpp  UI.hpp  globals.hpp  utils.hpp
Jack of Blades (v2)/game/sprites/: player.hpp  sprite.hpp
Jack of Blades (v2)/resources/shaders/: post.fsh
src/: CMakeLists.txt  editor.json  game.cpp  game.hpp  imgui.ini  level_editor.cpp  main.cpp  player.hpp  settings.json
src/Editor/: LevelEditor.hpp  utils.hpp
src/data/animation/: default.json  player_fall.json  player_front_idle.json  player_front_walking.json  side_idle.json  side_walking.json  stone_brick_wall_top.json  stone_tiles.json
src/data/level/: example.json
src/game/lib/: JOB.hpp  enums.hpp  globals.hpp  json.hpp  utils.hpp
src/game/sprites/: player.hpp  sprite.hpp
src/imgui-1.91.9b/: rlImGui.cpp
src/lib/: UI.hpp  lib.hpp  util.hpp
